--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,8 @@ jobs:
         git config user.name "SrikanthPandanaboina"
         #git config user.email srikanth.pandanaboina39@gmail.com
         GIT_COMMITTER_DATE="$(git show --format=%aD | head -1)"
-        git tag --annotate "1.1.1" --message 'My version tag with metadata in SemVer 2.0 format'
-        git tag --annotate "1.1.2"--message 'My version tag in SemVer 2.0 format'
+        git tag --annotate "1.1.3" --message 'My version '
+        git tag --annotate "1.1.3+Serenity.version"--message 'My version meta tag'
         git push origin --tags
 
   # - task: GitVersion@5
