--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,14 +13,22 @@ jobs:
     displayName: Checkout repository
     persistCredentials: true
 
-  - script: |-
+  - pwsh: |-
         # Write your commands here
-        echo 'Hello world'
+        $previousVersion = git for-each-ref --sort=-creatordate --format '%(tag)' refs/tags |
+          Select-Object -First 1
+        $semVerRegex = [regex]::new('^(?<major>0|[1-9]\d*)\.(?<minor>0|[1-9]\d*)\.(?<patch>0|[1-9]\d*)(?:-(?<prerelease>(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+(?<metadata>[0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$')
+        $previousVersionMatch = $semVerRegex.Match($PreviousVersion)
+        $previousMajor = [int]$previousVersionMatch.Groups['major'].Value
+        $previousMinor = [int]$previousVersionMatch.Groups['minor'].Value
+        $previousPatch = [int]$previousVersionMatch.Groups['patch'].Value
+        $previousPrerelease = $previousVersionMatch.Groups['prerelease'].Value
+        $previousMetadata = $previousVersionMatch.Groups['metadata'].Value
+        $newPatch= $previousPatch+1
         git config user.name "SrikanthPandanaboina"
         #git config user.email srikanth.pandanaboina39@gmail.com
         GIT_COMMITTER_DATE="$(git show --format=%aD | head -1)"
-        git tag --annotate "1.1.3" --message 'My version '
-        git tag --annotate "1.1.3+Serenity.version"--message 'My version meta tag'
+        git tag --annotate $previousMajor.$previousMinor.$newPatch --message 'My version'
         git push origin --tags
 
   # - task: GitVersion@5
