--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,7 @@ jobs:
 
   - pwsh: |-
         # Write your commands here
-        $previousVersion = git for-each-ref --sort=-creatordate --format '%(tag)' refs/tags |
-          Select-Object -First 1
+        $previousVersion = git for-each-ref --sort=-creatordate --format '%(tag)' refs/tags | Select-Object -First 1
         $semVerRegex = [regex]::new('^(?<major>0|[1-9]\d*)\.(?<minor>0|[1-9]\d*)\.(?<patch>0|[1-9]\d*)(?:-(?<prerelease>(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+(?<metadata>[0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$')
         $previousVersionMatch = $semVerRegex.Match($PreviousVersion)
         $previousMajor = [int]$previousVersionMatch.Groups['major'].Value
