--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,8 @@ jobs:
         $previousMetadata = $previousVersionMatch.Groups['metadata'].Value
         $newPatch= $previousPatch+1
         git config user.name "SrikanthPandanaboina"
-        #git config user.email srikanth.pandanaboina39@gmail.com
-        $tags=git tag --points-at HEAD
+        git config user.email srikanth.pandanaboina39@gmail.com
+        $tags = git tag --points-at HEAD
         echo tags: $tags
         if ( $tags.Count -gt 1)
         {
