Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ jobs:
         $newPatch= $previousPatch+1
         git config user.name "SrikanthPandanaboina"
         git config user.email srikanth.pandanaboina39@gmail.com
+        echo $(Build.SourceVersion)
         $tags = git tag --points-at HEAD
         echo tags: $tags
         if ( $tags.Count -gt 1)
