--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
         echo $(Build.SourceVersion)
         $tags = git tag --points-at $(git log -n1 --pretty='%H')
         echo tags: $tags
-        if ( $tags.Count -gt 1)
+        if ( $tags.Count -lt 1)
         {
           $newVersion="$($previousMajor).$($previousMinor).$($newPatch)"
           echo New Version: $newVersion
