--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,8 +29,8 @@ jobs:
         $newPatch= $previousPatch+1
         git config user.name "SrikanthPandanaboina"
         git config user.email srikanth.pandanaboina39@gmail.com
-        echo $(Build.SourceVersion)
-        $tags = git tag --points-at $(Build.SourceVersion)
+        echo HEAD
+        $tags = git tag --points-at HEAD
         echo tags: $tags
         if ( $tags.Count -lt 1)
         {
