--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,8 +46,8 @@ jobs:
           echo New Version: $semVer
           git tag --annotate $semVer --message 'My version'
           git push origin --tags
-          echo "##vso[task.setvariable variable=semVer]$semVer"
-          echo "##vso[task.setvariable variable=Proceed]Yes"
+          echo "##vso[task.setvariable variable=semVer;isOutput=true]$semVer"
+          echo "##vso[task.setvariable variable=Proceed;isOutput=true]Yes"
         }
         else
         {
