Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,6 +103,7 @@ jobs:
         arguments: $(dockerHubRepositoryName)/$(serviceName):$(semVerMetaBuild) $(dockerHubRepositoryName)/$(serviceName):$(semVer)
 
     - bash: |-
+       echo semVerMetaBuild: $semVerMetaBuild
        semVerMetaDocker=$(echo '$(semVerMeta)' | sed 's/\+/_/g')
        echo "##vso[task.setvariable variable=semVerMetaDocker]$semVerMetaDocker"
       displayName: Adapt SemVer for use as Docker tag
