--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
-#trigger: none
+trigger: none
 pr: none
 pool:
   vmImage: ubuntu-latest
@@ -103,7 +103,8 @@ jobs:
         arguments: $(dockerHubRepositoryName)/$(serviceName):$(semVerMetaBuild) $(dockerHubRepositoryName)/$(serviceName):$(semVer)
 
     - bash: |-
-       echo semVerMetaBuild: $semVerMetaBuild
+       echo semVerMetaBuild(test pipeline runID): $semVerMetaBuild
+       echo semVerMetaDocker: $semVerMetaDocker
        semVerMetaDocker=$(echo '$(semVerMeta)' | sed 's/\+/_/g')
        echo "##vso[task.setvariable variable=semVerMetaDocker]$semVerMetaDocker"
       displayName: Adapt SemVer for use as Docker tag
