--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ resources:
       source: azure-iot-platform-dotnet.ci.test
       trigger:
         branches:
-          - master
+        - test-pipeline-min-steps
 variables:
   - template: variables-all.yaml
   - template: ../templates/imageTagVariable.yaml
