Update release.yml for Azure Pipelines

--- a/release.yml
+++ b/release.yml
@@ -7,7 +7,7 @@ variables:
   - name: semVer
     value: $(semVerMajor).$(semVerMinor).$(semVerPatch)
   - name: semVerMeta
-    value: $(semVer)+$(semVerMetaSha)+$(serenityVer).$(semVerMetaBuild)
+    value: $(semVer)+$(semVerMetaSha).$(semVerMetaBuild)
   
 stages:
   - stage: checkParameters
@@ -182,6 +182,7 @@ stages:
               GIT_COMMITTER_DATE="$(git show --format=%aD | head -1)"
               git tag --annotate $(semVerMeta) --message 'Customer version tag with metadata in SemVer 2.0 format'
               git tag --annotate $(semVer) --message 'Customer version tag in SemVer 2.0 format'
-              #git tag --annotate $(serenityVer) --message 'Serenity version tag in SemVer 2.0 format'
+              semSerenityVer=$semVer+$serenityVer
+              git tag --annotate $(semSerenityVer) --message 'Serenity version tag in SemVer 2.0 format'
               git push origin --tags
             displayName: Add tags
