Update release.yml for Azure Pipelines

--- a/release.yml
+++ b/release.yml
@@ -191,6 +191,7 @@ stages:
   - stage: createGithubRelease
     displayName: Create a Gthub release
     dependsOn:
+      - tagImages
       - tagRepository
     jobs:
       - job: releaseGithubVersion
