Update release.yml for Azure Pipelines

--- a/release.yml
+++ b/release.yml
@@ -203,5 +203,5 @@ stages:
             displayName: GitHub release (create)
             inputs:
              gitHubConnection: d40ecbeb-33bd-451f-84d2-2c5ca69ffd37
-             target: $(Build.SourceVersion)
+             target: $(semVerMetaSha)
              tagPattern: $(semVer)
